"report check in 2018-11-27"

--- a/stureports/think-java/NickPoletti1.think-java_results.html
+++ b/stureports/think-java/NickPoletti1.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-20
+Run date: 2018-11-27
 <br>Student User: NickPoletti1
 <br>Project: think-java
 <br>
@@ -77,8 +77,8 @@ Exercise4!
 	Can you guess what it is
 	Guess a number: 
 	Your guess is 13
-	The number I was thinking of was 31
-	Your guess was off by: 18
+	The number I was thinking of was 90
+	Your guess was off by: 77
 	
 <--
 	[OUTPUT OK]
@@ -370,9 +370,38 @@ MultAdd Exercise
 
 *[BEGIN chapter11]
   [EXPECTING TARGETS] ['Tile']
-	[ERROR] No chapter work for:chapter11
+[COMPILING] Tile.java
+	[SUCCESSFUL COMPILE] Tile.java
+[TESTING WITH] TestTile
+[COMPILING] TestTile.java
+	[SUCCESSFUL COMPILE] TestTile.java
+[RUNNING] TestTile
+-->
+
+	<br>Chapter11, Exercise3: Tile Class
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">new Tile()("C, 3")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">new Tile()("Z, 10")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[3-C ].getLetter("")  </td><td align="left">C</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[3-C ].getValue("")  </td><td align="left">3</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[3-A ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[8-A ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[10-Z ].getLetter("")  </td><td align="left">Z</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[10-Z ].getValue("")  </td><td align="left">10</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[10-A ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[8-A ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[10-Z ].toString("")  </td><td align="left">10-Z</td><td bgcolor="red"><b>Z - 10 </b></td></tr>
+	<tr><td align="right" width="200">Tile[3-Z ].equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[3-Z ].!equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
+	[deductions=0.05]
+	
+	
+<--
+	[OUTPUT OK]
+
+[SUMMARY] 
+	['Tile: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
 [DONE chapter11]
 [ASSIGNMENT DONE]  Think Java: Ch11
-<b>          [SCORE] 0.25</b>
+<b>          [SCORE] <font color="green">0.95</font></b>
 
 </pre></body></html>
