--- a/stureports/think-java/jadenngo13.think-java_results.html
+++ b/stureports/think-java/jadenngo13.think-java_results.html
@@ -1,5 +1,5 @@
 <html><head><title>think-java status</title></head><body>
-Run date: 2018-11-27
+Run date: 2018-11-30
 <br>Student User: jadenngo13
 <br>Project: think-java
 <br>
@@ -66,8 +66,8 @@ Enter seconds: 13 seconds = 0 hours, 0.0 minutes, and 13 seconds
 [RUNNING] Exercise4
 -->
 Enter a number: Your guess is: 13
-	The number I was thinking of was: 97
-	You were off by: 84
+	The number I was thinking of was: 68
+	You were off by: 55
 	
 <--
 	[OUTPUT OK]
@@ -778,30 +778,34 @@ letter: s
 	[SUCCESSFUL COMPILE] Tile.java
 [TESTING WITH] TestTile
 [COMPILING] TestTile.java
-	[ERROR] javac failed TestTile.java
- ----begin compile output------- 
-TestTile.java:72: error: cannot find symbol
-	                t.setLetter('A');
-	                 ^
-	  symbol:   method setLetter(char)
-	  location: variable t of type Tile
-	TestTile.java:80: error: cannot find symbol
-	                t.setValue(8);
-	                 ^
-	  symbol:   method setValue(int)
-	  location: variable t of type Tile
-	TestTile.java:133: error: cannot find symbol
-	                t2.setValue(value + 5);
-	                  ^
-	  symbol:   method setValue(int)
-	  location: variable t2 of type Tile
-	3 errors
+	[SUCCESSFUL COMPILE] TestTile.java
+[RUNNING] TestTile
+-->
+
+	<br>Chapter11, Exercise3: Tile Class
+	<table width="600" border="1"><tr><th align="right" width="200"> Function Call</th><th align= "left"> -->Your output<--</th><th width="50"> Expected Output </th></tr><tr><td align="right" width="200">new Tile()("C, 3")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">new Tile()("Z, 10")  </td><td align="left">Null</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Letter : C | value : 3 ].getLetter("")  </td><td align="left">C</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Letter : C | value : 3 ].getValue("")  </td><td align="left">3</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Letter : A | value : 3 ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Letter : A | value : 8 ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Letter : Z | value : 10 ].getLetter("")  </td><td align="left">Z</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Letter : Z | value : 10 ].getValue("")  </td><td align="left">10</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Letter : A | value : 10 ].setLetter("'A'")  </td><td align="left">A</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Letter : A | value : 8 ].getValue("")  </td><td align="left">8</td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Letter : Z | value : 10 ].toString("")  </td><td align="left">Letter : Z | value : 10</td><td bgcolor="red"><b>Z - 10 </b></td></tr>
+	<tr><td align="right" width="200">Tile[Letter : Z | value : 3 ].equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
+	<tr><td align="right" width="200">Tile[Letter : Z | value : 3 ].!equals("")  </td><td align="left"></td><td width="50" bgcolor="green"> :) </td></tr>
+	[deductions=0.05]
 	
------------END COMPILE-------
+	
+<--
+	[OUTPUT OK]
+
 [SUMMARY] 
-	['Tile: COMPILE ERROR (- 0.30)']
+	['Tile: PASSED - GOOD JOB BUT SOME EDGE CASE ERRORS WERE FOUND.']
 [DONE chapter11]
 [ASSIGNMENT DONE]  Think Java: Ch11
-<b>          [SCORE] 0.70</b>
+<b>          [SCORE] <font color="green">0.95</font></b>
 
 </pre></body></html>
